--- a/example.jade
+++ b/example.jade
@@ -55,7 +55,9 @@ html(lang="en")
 
     h2 Inline examples:
 
-    p View source to see the code and examples.  Resize your browser to see the effects.
+    p Resize your browser to see the plugin resize the examples below.&nbsp;
+      a(href="https://github.com/MichaelJCole/newheights/blob/master/example.html") View source
+      |  to see the code and examples.
 
     h3 $('#default span').newHeights(500): Update every 500ms
     #default.example
@@ -72,7 +74,7 @@ html(lang="en")
 
 
     h3 $('#once span').newHeights('once'): Update just once.
-    p Refresh to resize on ready() or
+    p Refresh to resize on ready() or&nbsp;
       input(type="button", value="click here", onclick="$('#once span').newHeights('once');")
 
     #once.example
